--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -8,10 +8,9 @@ inputs:
   namespace: default
   src: ./  #代码路径
   type: web # 函数类型，默认为 event(事件类型)，web(web类型)
-  entryFile: app.js #入口文件名（代码中无scf_bootstrap文件，且函数类型为web类型时生效）
   runtime: Python3.6 # 云函数运行时的环境
   region: ap-guangzhou # 云函数所在区域
-  description: jd sign
+  description: "jd sign"
   memorySize: 512 # 内存大小，单位MB
   timeout: 180 # 函数执行超时时间，单位秒
   initTimeout: 30 # 初始化超时时间，单位秒
@@ -19,15 +18,13 @@ inputs:
   environment: #  环境变量
       variables: #  环境变量对象
         TZ: Asia/Shanghai
-  events: # 触发器
-    - apigw: # api网关触发器，已有apigw服务，配置触发器
-        parameters:
-          serviceName: sign
-          protocols:
+  events: 
+    - apigw: 
+        parameters: 
+          protocols: 
             - http
             - https
-          endpoints:
-            - path: /genToken
-              method: POST
-              responseType: JSON
-              serviceTimeout: 15
+          environment: release
+          endpoints: 
+            - path: /
+              method: ANY
