--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -9,6 +9,7 @@ inputs:
   src: ./  #代码路径
   type: web # 函数类型，默认为 event(事件类型)，web(web类型)
   runtime: Python3.6 # 云函数运行时的环境
+  installDependency: true
   region: ap-guangzhou # 云函数所在区域
   description: "jd sign"
   memorySize: 512 # 内存大小，单位MB
@@ -27,4 +28,4 @@ inputs:
           environment: release
           endpoints: 
             - path: /
-              method: ANY
+              method: POST
