--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -9,12 +9,9 @@ inputs:
   src: ./  #代码路径
   type: web # 函数类型，默认为 event(事件类型)，web(web类型)
   runtime: Python3.6 # 云函数运行时的环境
-  # installDependency: true
+  installDependency: true
   region: ap-guangzhou # 云函数所在区域
-  description: "jd sign"
-  memorySize: 512 # 内存大小，单位MB
-  timeout: 180 # 函数执行超时时间，单位秒
-  initTimeout: 30 # 初始化超时时间，单位秒
+  description: "京东算sign并返回"
   publicAccess: true # 是否开启公网访问
   environment: #  环境变量
       variables: #  环境变量对象
